fix: Increase CodeMirror hint z-index above modals
Fixes the QueryEditor's autocomplete on the Snippet editor modal, which has a z-index of 300.

--- a/querybook/webapp/components/QueryEditor/QueryEditor.scss
+++ b/querybook/webapp/components/QueryEditor/QueryEditor.scss
@@ -44,7 +44,7 @@
     border: none;
     margin-left: -94px;
     overflow: auto;
-    z-index: 30;
+    z-index: 400;
 
     // New style
     background: var(--bg);
